# PushSwap.Kt

./: .gitignore  LICENSE  TechnicalOverview.md  Test Results - DescendingTest.html  Test Results - MainTest.html  Test Results - MainTest_runAll.html  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
newKotlin/: Settings.kt
newKotlin/a_star/: AStar.kt  HeuristicUtil.kt  PushHeuristic.kt
newKotlin/chunk/: ChunkSort.kt  SmallSort.kt
newKotlin/data/: Chunk.kt  CircularBuffer.kt  Move.kt  Stack.kt
newKotlin/utils/: Utils.kt
src/main/kotlin/: Main.kt  Settings.kt
src/main/kotlin/a_star/: AStar.kt  BestStates.kt  HeuristicUtil.kt  MixedHeuristic.kt  PullHeuristic.kt  PushHeuristic.kt
src/main/kotlin/chunk/: ChunkSort.kt  SmallSort.kt
src/main/kotlin/data/: Chunk.kt  CircularBuffer.kt  Move.kt  PackedMoveList.kt  PriorityQueue.kt  Stack.kt  VirtualRotatedBuffer.kt
src/main/kotlin/utils/: Debug.kt
src/pushswap/: __init__.py  entry.py
src/pushswap/chunk/: chunk_sort.py  init_chunks.py  small_sort.py
src/pushswap/chunk/old/: chunk_sort.py  old_a_star.py  old_heuristics.py
src/pushswap/dataclass/: ChunkInfo.py  Heap.py  Move.py  PriorityQueue.py  Stack.py
src/pushswap/utils/: debug.py  parser.py  verbose.py
src/test/kotlin/: Checker.kt  Settings.kt  Utils.kt
src/test/kotlin/tests/: CheckerTest.kt  DescendingTest.kt  ErrorTest.kt  InvalidIOTest.kt  MainSuite.kt  MainTest.kt  PermutationTest.kt  SmallSortTest.kt  ZigZagTest.kt
src/test/tests/: Test Results - PermutationTest - 7.html
